refactor: integrate FuncCalling into Tool